syntax = "proto3";
package app.v1;

import "buf/validate/validate.proto";
import "kernel/resource.proto";
import "core/v1/http.proto";
import "kernel/matcher.proto";

option go_package = "github.com/aileron-gateway/aileron-gateway/apis/app/v1";

// Skipper resource definition.
// apiVersion="app/v1", kind="Skipper".
message Skipper {
    string          APIVersion = 1 [json_name = "apiVersion"];
    string          Kind       = 2 [json_name = "kind"];
    kernel.Metadata Metadata   = 3 [json_name = "metadata"];
    SkipperSpec     Spec       = 4 [json_name = "spec"];
}

// SkipperSpec is the specifications for the Skipper object.
message SkipperSpec {
    // [OPTIONAL]
    // SkipConditions is the list of conditions
    // to skip the configured middleware or tripperware.
    // Default is not set.
    repeated SkipConditionSpec SkipConditions = 1 [json_name = "skipConditions"];

    // [OPTIONAL]
    // Middleware is the list of references to middleware.
    // Configured middleware is skipped when the requests
    // matched to one of the skip conditions.
    // Default is not set.
    repeated kernel.Reference Middleware = 2 [json_name = "middleware"];

    // [OPTIONAL]
    // Tripperware is the list of references to tripperware.
    // Configured tripperware is skipped when the requests
    // matched to one of the skip conditions.
    // Default is not set.
    repeated kernel.Reference Tripperware = 3 [json_name = "tripperware"];
}

// SkipConditionSpec is the configuration spec for the matching conditions.
message SkipConditionSpec {
    // [OPTIONAL]
    // Matcher is a matcher which matches to defined patterns.
    // Default is not set.
    kernel.MatcherSpec Matcher = 1 [json_name = "matcher"];

    // [OPTIONAL]
    // Methods is the list of HTTP methods to be matched.
    // Default is not set.
    repeated core.v1.HTTPMethod Methods = 2 [json_name = "methods", (buf.validate.field).repeated.unique = true];
}
